LF-4251 fix spacing in ProductDetails, simplify scss

--- a/packages/webapp/src/components/Task/AddSoilAmendmentProducts/styles.module.scss
+++ b/packages/webapp/src/components/Task/AddSoilAmendmentProducts/styles.module.scss
@@ -15,27 +15,6 @@
 
 @import '../../../assets/mixin.scss';
 
-@mixin sectionStyle() {
-  overflow: hidden;
-  border-radius: 8px;
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.05);
-
-  &.border {
-    border: 1px solid var(--Colors-Neutral-Neutral-100, #d0d4db);
-  }
-}
-
-.sectionBody {
-  padding: 8px 16px 16px 16px;
-  border-radius: 0 0 8px 8px;
-  @include flex-column-gap();
-
-  &.border {
-    border: 1px solid var(--Colors-Neutral-Neutral-100, #d0d4db);
-    border-top: none;
-  }
-}
-
 /*----------------------------------------
   AddSoilAmendmentProducts
 ----------------------------------------*/
@@ -96,6 +75,11 @@
 .productDetails {
   border: solid 1px transparent;
 
+  .productDetailsContent {
+    padding: 8px 16px 16px 16px;
+    @include flex-column-gap(24px);
+  }
+
   .expandIcon {
     width: 16px;
     height: 16px;
@@ -138,7 +122,10 @@
   }
 
   &.expanded {
-    @include sectionStyle();
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.05);
+    border: 1px solid var(--Colors-Neutral-Neutral-100, #d0d4db);
 
     .productDetailsTitle {
       width: 100%;
@@ -154,6 +141,10 @@
   .additionalNutrients {
     border: solid 1px var(--Colors-Accent---singles-Blue-light, #e9f3ff);
     border-radius: 4px;
+  }
+  .additionalNutrientsBody {
+    padding: 24px 16px 16px 16px;
+    @include flex-column-gap(24px);
   }
   .additionalNutrientsTitle {
     display: flex;
